# mean-reversion-strategy-test

./: .gitignore  AGENTS.md  __init__.py  config.json  pyproject.toml  strategy.py
dashboard/: app.py  metadata.json  ui.py
tests/: test_strategy.py
